updated profile errors
