# API-Gateway/docs/swagger.json
@@ -2486,11 +2486,6 @@
         },
         "/payment/add": {
             "post": {
-                "security": [
-                    {
-                        "Authorization": []
-                    }
-                ],
                 "description": "Add a PayPal payment email for the user",
                 "consumes": [
                     "application/json"
@@ -2503,6 +2498,13 @@
                 ],
                 "summary": "Add PayPal payment email",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Payment Details",
                         "name": "Payment",
